[package]
name = "twitter-scraper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.23"
reqwest = "0.11.13"
serde = { version = "1.0.151", features = ["derive"] }
serde_json = "1.0.90"
serde_url_params = "0.2.1"
tokio = { version = "1.23.0", features = ["test-util", "full"] }
urlencoding = "2.1.2"
